fixed border jumping in makeMove()
For NE, SE, SW and NW. Also created test functions to set up the board. Should do this in a better way with unit tests. POSSIBLE IMPROVEMENT

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 .cell{
-    width: 50px;
-    height: 50px;
-    line-height: 50px;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
     background-color: green;
     border: 1px solid black;
     /* border-radius: 50%; */
